# api/config/swagger.json
@@ -102,21 +102,21 @@
                 }
             }
         },
-        "/posts/{postId}": {
+        "/posts/{id}": {
             "get": {
                 "tags": [
                     "VO"
                 ],
                 "summary": "Find profile by ID",
                 "description": "For administrators to view any user profile",
-                "operationId": "getPetById",
+                "operationId": "getPostById",
                 "produces": [
                     "application/json"
                 ],
                 "parameters": [
                     {
                         "in": "path",
-                        "name": "postId",
+                        "name": "id",
                         "description": "ID of post that needs to be fetched",
                         "required": true,
                         "type": "string",
@@ -130,11 +130,11 @@
                             "$ref": "#/definitions/Post"
                         }
                     },
-                    "400": {
-                        "description": "Invalid ID supplied"
-                    },
-                    "404": {
-                        "description": "Post not found"
+                    "default": {
+                        "description": "Unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
